--- a/src/Pages/Favorites/favorites.css
+++ b/src/Pages/Favorites/favorites.css
@@ -1,5 +1,5 @@
 .my-movies{
-    margin-top: 24px;
+    margin-top: 30px;
     flex-direction: column;
     display: flex;
     align-items: center;
@@ -7,17 +7,39 @@
 
 .my-movies h1{
     margin-bottom: 14px;
+    color: #E3B505;
+}
+
+.my-movies button{
+    background-color: #DB504A;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.my-movies button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .my-movies span{
+    padding: 5px;
     font-size: 18px;
+    color: black;
 }
 
 .my-movies ul{
-    width: 720px;
+    padding: 1%;
+    margin-top: 5px;
+    width: 60%;
 }
 
 .my-movies ul li{
+    margin: 5px;
+    background-color: #80b2c7;
     list-style: none;
     display: flex;
     justify-content: space-between;
@@ -33,6 +55,6 @@
 
 .my-movies div a{
     text-decoration: none;
-    color: blue;
+    color: white;
     margin-right: 15px;
 }
