--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -13,7 +13,7 @@
 .lista-filmes strong{
     margin-bottom: 14px;
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     display: block;
 }
 
@@ -31,10 +31,16 @@
     align-items: center;
     justify-content: center;
     padding: 10px 0;
-    font-size: 24px;
-    background-color: rgb(137, 167, 211);
+    font-size: 18px;
+    color: black;
+    text-decoration: none;
+    background-color: #E3B505;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
+}
+
+.lista-filmes a:hover{
+    color: aliceblue;
 }
 
 .loading{
